@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.4
+VERSION=1.4.5
 
-DEPENDENCY="zeda=1.6.3;zm=1.3.12"
+DEPENDENCY="zeda=1.6.4;zm=1.3.13"
