@@ -1,3 +1,5 @@
+2021. 6. 1. Applied new zeda-makefile-gen to compilation of shared objects. [src]
+2021. 6. 1. Modified allclean.sh in example to skip directories without makefile. [example]
 2021. 5.30. Applied zeda-deb-gen. [makefile]
 2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
 2021. 5. 7. Made tools/, and modified makefiles. [dzco, app, tools]
